infra/k8s/base/lod-ingress-external.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lod-external
  labels:
    app: web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - lod.charno.net
    secretName: charno-net-wildcard-tls
  rules:
  - host: lod.charno.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: linked-data-service
            port:
              number: 3000
